--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -1,3 +1,5 @@
 {{ define "main" }}
-  {{ partial "page" .Params.content }}
+  <main class="[ landing-page-layout ]">
+    {{ partial "page" .Params.content }}
+  </main>
 {{ end }}
