feat: add a bunch of styles

--- a/assets/styles/components/feature.scss
+++ b/assets/styles/components/feature.scss
@@ -1,19 +1,33 @@
 .feature {
   display: grid;
-  grid-template-columns: var(--size-400) 1fr var(--size-400);
+  grid-template-columns: 1fr;
   grid-template-rows: 1fr;
 
   align-items: center;
-  justify-content: center;
+  justify-items: center;
 
   > * {
-    grid-column: 2/3;
+    grid-column: 1/2;
     grid-row: 1/2;
     z-index: 1;
   }
 
-  > img {
-    grid-column: 1/4;
-    width: 100%;
+  > div {
+    padding: var(--size-400);
+  }
+
+  // the line above the headline -> standfirst
+  h2 {
+    font-size: var(--size-400);
+  }
+
+  // the headline itself
+  h1 {
+    font-size: var(--size-600);
+
+    strong {
+      color: var(--color-primary);
+      font-weight: 400;
+    }
   }
 }
