--- a/layouts/partials/marks.html
+++ b/layouts/partials/marks.html
@@ -1,11 +1,11 @@
 {{ $str := .text }}
 {{ range .marks }}
   {{ if eq .type "bold" }}
-    {{ $str = printf "<bold>%s</bold>" $str }}
+    {{ $str = printf "<strong>%s</strong>" $str }}
   {{ else if eq .type "underline" }}
     {{ $str = printf "<u>%s</u>" $str }}
-  {{ else if eq .type "italics" }}
-    {{ $str = printf "<i>%s</i>" $str }}
+  {{ else if eq .type "italic" }}
+    {{ $str = printf "<em>%s</em>" $str }}
   {{ end }}
 {{ end }}
 {{ return safeHTML $str }}
