--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -8,9 +8,12 @@
       {{ .Site.Title }}
     {{ end }}</title>
     {{ $isDev := true }}
-    {{ $options := (dict "enableSourceMap" $isDev) }}
 
     {{ $scriptOptions := (dict "sourceMap" (cond $isDev "inline" nil)) }}
+
+    {{ if $isDev }}
+      <script defer src="//app.storyblok.com/f/storyblok-v2-latest.js" type="text/javascript"></script>
+    {{ end }}
 
     {{ $scripts := (slice 
       "scripts/widgets/widgets.ts"
@@ -22,6 +25,7 @@
       <script defer src="{{ $script.Permalink }}" integrity="{{ $script.Data.Integrity }}" type="text/javascript"></script>
     {{ end }}
 
+    {{ $styleOptions := (dict "enableSourceMap" $isDev) }}
     {{ $styles := (slice
       "styles/reset.scss"
       "styles/tokens/tokens.scss"
@@ -33,7 +37,7 @@
     ) }}
 
     {{ range $styles }}
-      {{ $style := resources.Get . | resources.ToCSS | resources.Fingerprint }}
+      {{ $style := resources.Get . | resources.ToCSS $styleOptions | resources.Fingerprint }}
       <link rel="stylesheet" href="{{ $style.Permalink }}" integrity="{{ $style.Data.Integrity }}">
     {{ end }}
   </head>
