--- a/layouts/partials/components/feature.html
+++ b/layouts/partials/components/feature.html
@@ -1,14 +1,17 @@
+{{ ._editable | safeHTML }}
 <section class="[ feature ]">
   {{ partial "image" (dict "filename" .media.filename "width" 400 "height" 400 "focus" .media.focus ) }}
   <div class="[ flow ]">
     <div>
-      <h2>{{ .standfirst }}</h2>
-      <h1>{{ partial "components/feature/richtext" .headline }}</h1>
+      <h2 class="[ leading-tight ]">{{ .standfirst }}</h2>
+      <h1 class="[ leading-tight ]">{{ partial "components/feature/richtext" .headline }}</h1>
     </div>
     {{ $cta := index .call_to_action 0 }}
-    {{ if ne $cta nil }}
-      {{ partial "components/call-to-action" $cta }}
-    {{ end }}
+    {{ $cta._editable | safeHTML }}
+    <a
+      class="[ button is-{{ $cta.theme }} ] [ space-500 ]"
+      href="{{ $cta.target }}"
+    >{{ $cta.text }}</a>
   </div>
 </section>
 
