--- a/layouts/partials/components/showcase.html
+++ b/layouts/partials/components/showcase.html
@@ -1,13 +1,14 @@
 {{ ._editable | safeHTML }}
 <section class="[ showcase ]">
-  <div class="[ showcase__wrapper ]">
-    {{ range .items }}
-      {{ if eq .component "feature" }}
-        {{ partial "components/feature" . }}
-      {{ else }}
-        unable to find showcase component for {{ .component }}
+  <slider-controls>
+    <div class="[ showcase__wrapper ]">
+      {{ range .items }}
+        {{ if eq .component "feature" }}
+          {{ partial "components/feature" . }}
+        {{ else }}
+          unable to find showcase component for {{ .component }}
+        {{ end }}
       {{ end }}
-    {{ end }}
-  </div>
-  <slider-controls />
+    </div>
+  </slider-controls>
 </section>
