--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -9,20 +9,20 @@
     {{ end }}</title>
     {{ $isDev := true }}
 
-    {{ $scriptOptions := (dict "sourceMap" (cond $isDev "inline" nil)) }}
+    {{ $scriptOptions := (dict "sourceMap" (cond $isDev "inline" nil) "format" "esm") }}
 
     {{ if $isDev }}
-      <script defer src="//app.storyblok.com/f/storyblok-v2-latest.js" type="text/javascript"></script>
+      <script defer src="//app.storyblok.com/f/storyblok-v2-latest.js"></script>
     {{ end }}
 
     {{ $scripts := (slice 
-      "scripts/widgets/widgets.ts"
-      "scripts/main.ts"
+      "scripts/widgets/widgets.js"
+      "scripts/main.js"
     ) }}
 
     {{ range $scripts }}
       {{ $script := resources.Get . | js.Build $scriptOptions | resources.Fingerprint }}
-      <script defer src="{{ $script.Permalink }}" integrity="{{ $script.Data.Integrity }}" type="text/javascript"></script>
+      <script defer src="{{ $script.Permalink }}" integrity="{{ $script.Data.Integrity }}" type="module"></script>
     {{ end }}
 
     {{ $styleOptions := (dict "enableSourceMap" $isDev) }}
